packages/related/test/tests/test_plan_execution/logs/snapshots/node_error_in_source.txt
------------ 1 execution to run -------------
node (node_worker_thread@<mock>)
---------------------------------------------

✖ error_in_source.spec.js [<mock>/<mock>] 1/1 (all failed)
--------------- error ----------------
1 | export const doSomething = () => {
2 |   throw new Error("something");
            ^
Error: something
  at doSomething (<mock>/something.js:2:9)
  at <mock>/error_in_source.spec.js:3:1
--------------------------------------

------------------ summary ------------------
1 execution: all failed
duration: <mock>
---------------------------------------------